syntax = "proto3";

import "common/ComponentRequest.proto";
import "bookcomment/BookCommentResponse.proto";

option java_package="cn.migu.selection.proto.bookcommentservice";
option java_outer_classname="_BookCommentService";
option java_generic_services=true;

service BookCommentService {
	rpc getBookCommentInfo (ComponentRequest) returns (BookCommentResponse);
}